Bug 258725 - incorrect locales appear in extensions (and can sometimes cause the entire app to switch locales) r+sr=darin a=asa